--- a/data/enterprise-data-warehouses/visualization-tools.adoc
+++ b/data/enterprise-data-warehouses/visualization-tools.adoc
@@ -12,7 +12,9 @@
 * Power View
 * Power Map
 
-, m language, dax, slicer, treemap
+Search for: m language, dax.
+
+Useful visualizations: slicer, treemap.
 
 "Power Query (Get & Transform) and Power Pivot complement each other. Power Query is the recommended experience for importing data. Power Pivot is great for modeling the data you’ve imported. Use both to shape your data in Excel so you can explore and visualize it in PivotTables, PivotCharts, and Power BI."
 -- https://support.microsoft.com/en-us/office/how-power-query-and-power-pivot-work-together-a5f52cba-2150-4fc0-bb8f-b21d69990bc0
