--- a/tools/unix/readme.adoc
+++ b/tools/unix/readme.adoc
@@ -14,6 +14,7 @@
 .TODO
 [%collapsible]
 ====
+. `file -bi FILE`
 . xargs
 ** `ls | xargs -I {} echo {}`
 . https://unix.stackexchange.com/questions/12453/how-to-determine-linux-kernel-architecture
@@ -22,6 +23,7 @@
 . https://www.debian.org/doc/manuals/debian-reference/
 . https://unix.stackexchange.com/questions/275684/how-do-i-automate-to-display-cursor-under-the-prompt-on-shell[Displey cursore under the prompt]
 . https://suckless.org/[suckless.org software for X window system]
+. https://www.pcre.org/[PCRE - Perl Compatible Regular Expressions]
 ====
 
 [bibliography]
