--- a/programming/readme.adoc
+++ b/programming/readme.adoc
@@ -9,6 +9,7 @@
 [%collapsible]
 ====
 . https://en.wikipedia.org/wiki/History_of_programming_languages
+. https://www.cs.rochester.edu/~scott/pragmatics/[Programming Language Pragmatics]
 . https://dl.acm.org/doi/10.1145/359576.359579[1978, John Backus, Can programming be liberated from the von Neumann style?: a functional style and its algebra of programs]
 . https://dl.acm.org/doi/10.1145/358896.358899[1980, Kenneth E. Iverson, Notation as a tool of thought]
 . https://dl.acm.org/doi/10.1145/3520306.3534504[2022, Conor Hoekstra, Combinatory logic and combinators in array languages]
