--- a/programming/readme.adoc
+++ b/programming/readme.adoc
@@ -9,6 +9,7 @@
 [%collapsible]
 ====
 . https://en.wikipedia.org/wiki/History_of_programming_languages
+. https://exercism.org/
 . https://www.cs.rochester.edu/~scott/pragmatics/[Programming Language Pragmatics]
 . https://dl.acm.org/doi/10.1145/359576.359579[1978, John Backus, Can programming be liberated from the von Neumann style?: a functional style and its algebra of programs]
 . https://dl.acm.org/doi/10.1145/358896.358899[1980, Kenneth E. Iverson, Notation as a tool of thought]
@@ -20,6 +21,9 @@
 . https://en.wikipedia.org/wiki/Tacit_programming
 . https://aplwiki.com/wiki/Train
 . https://docs.modular.com/mojo/
+. https://www.uiua.org/
+. https://www.info.ucl.ac.be/~pvr/VanRoyChapter.pdf[Programming Paradigms for Dummies: What Every Programmer Should Know]
+. https://people.inf.ethz.ch/wirth/AD.pdf[Algorithms and Data Structures by Niklaus Wirth]
 ====
 
 == Start Programming
